testdata/baselines/reference/submodule/conformance/multiline.errors.txt
a.ts(12,1): error TS2578: Unused '@ts-expect-error' directive.
b.tsx(22,18): error TS2322: Type 'number' is not assignable to type 'string'.
b.tsx(26,18): error TS2322: Type 'number' is not assignable to type 'string'.
b.tsx(32,1): error TS2578: Unused '@ts-expect-error' directive.


==== a.ts (1 errors) ====
    export const texts: string[] = [];
    
    /**
     @ts-ignore */
    texts.push(100);
    
    /**
     @ts-expect-error */
    texts.push(100);
    
    /**
     @ts-expect-error */
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
    texts.push("100");
    
==== b.tsx (3 errors) ====
    import * as React from "react";
    
    export function MyComponent(props: { foo: string }) {
      return <div />;
    }
    
    let x = (
      <div>
        {/*
       @ts-ignore */}
        <MyComponent foo={100} />
    
        {/*@ts-ignore*/}
        <MyComponent foo={100} />
    
        {/*
       @ts-expect-error */}
        <MyComponent foo={100} />
    
        {/*
       // @ts-expect-error */}
        <MyComponent foo={100} />
                     ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 b.tsx:3:38: The expected type comes from property 'foo' which is declared here on type 'IntrinsicAttributes & { foo: string; }'
    
        {/*
       * @ts-expect-error */}
        <MyComponent foo={100} />
                     ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 b.tsx:3:38: The expected type comes from property 'foo' which is declared here on type 'IntrinsicAttributes & { foo: string; }'
    
        {/*@ts-expect-error*/}
        <MyComponent foo={100} />
    
        {/*
       @ts-expect-error */}
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2578: Unused '@ts-expect-error' directive.
        <MyComponent foo={"hooray"} />
      </div>
    );
    